--- a/mockupViews/gamepage/gamePage.html
+++ b/mockupViews/gamepage/gamePage.html
@@ -14,7 +14,6 @@
 </head>
 
 <body>
-
     <div class="navbar">
         <header>
             <div class="left-container">
@@ -79,6 +78,11 @@
 <!--END OF GAME PANEL
 +++++++++++++++++++++++++++++++++-->
 
+
+  <footer>
+    <p class="footer-right"><a href="#">Back to top</a></p>
+    <p class="footer-left">&copy; 2017 WebTech Games, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+  </footer>
 
 </body>
 </html>
