Fixed navbar on gamePage

--- a/mockupViews/gamepage/gamePage.html
+++ b/mockupViews/gamepage/gamePage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Name of the Game</title>
+    <title>[Name of the Game]</title>
 
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/5.0.0/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700|Roboto:100,300,400,500,700,900" rel="stylesheet">
@@ -29,7 +29,7 @@
 +++++++++++++++++++++++++++++-->
 
     <div class="gameName">
-        <h1>Name of the game</h1>
+        <h1>[Name of the game]</h1>
     </div>
 
     <div class="highscores">
@@ -63,8 +63,6 @@
     <div class="gamebox">
         <button class="button green playbutton">Play &#9654</button>
     </div>
-
-
 
     <div class="graph">
         <h2 class="">[Insert Username], Your Scores</h2>
