--- a/Battleship/battleship.html
+++ b/Battleship/battleship.html
@@ -8,7 +8,11 @@
     <h1>Battleship</h1>
     <p>Instructions:<p>
     <p>Click on the board to fire a missile! Try to sink every battleship!</p>
+    <p>Click on the play button to begin!</p>
     <input type="button" value="Play" onclick="toggle()"/>
+    <div id="scoreBoard" style="...">
+        <p2>Your points: <span id="score">0</span></p2>
+	</div>
     <div id="gameboard" style="display:none"></div>
     <script type="text/javascript" src="battleship.js"></script>
   </body>
