--- a/mockupViews/landing/index.html
+++ b/mockupViews/landing/index.html
@@ -5,22 +5,27 @@
     <title>Title</title>
 
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/5.0.0/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700|Roboto:100,300,400,500,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700|Roboto:100,300,400,500,700,900"
+          rel="stylesheet">
 
     <link rel="stylesheet" href="../css/vendor/cs-select.css">
     <link rel="stylesheet" href="../css/vendor/cs-skin-elastic.css">
     <link rel="stylesheet" href="general.css">
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="popup.css">
     <link rel="stylesheet" href="https://i.icomoon.io/public/temp/6b6caf7f8e/webtech-games/style.css">
 </head>
 <body>
+<div class="popup-blur">
     <header>
         <div class="left-container">
             <div class="logo"><span>WebTech</span> Games</div>
         </div>
         <div class="right-container">
-            <div class="signup"><a href="#" class="button green">Sign In</a><a href="#" class="button blue">Sign Up</a></div>
+            <div class="signup"><a class="button green" onclick="showPopup('sign-in')">Sign In</a><a class="button blue"
+                                                                                                     onclick="showPopup('sign-up')">Sign
+                Up</a></div>
         </div>
     </header>
     <main>
@@ -29,8 +34,9 @@
             <div class="banner-content">
                 <div class="splash">
                     <h1>Want To Track Your Gaming Skills?</h1>
-                    <p>Signing up allows you to record your game activity and highscores. Save your highscores and compete with others!</p>
-                    <a class="button blue" href="#">Sign Up Now</a>
+                    <p>Signing up allows you to record your game activity and highscores. Save your highscores and
+                        compete with others!</p>
+                    <a class="button blue" onclick="showPopup('sign-up')">Sign Up Now</a>
                 </div>
             </div>
         </div>
@@ -39,10 +45,10 @@
             <h3>Games</h3>
             <div class="sorting">
                 <select class="cs-select cs-skin-elastic">
-					<option value="" disabled selected>Sort Games By</option>
-					<option value="popularity">Popularity</option>
-					<option value="date">Date</option>
-				</select>
+                    <option value="" disabled selected>Sort Games By</option>
+                    <option value="popularity">Popularity</option>
+                    <option value="date">Date</option>
+                </select>
             </div>
         </div>
 
@@ -51,7 +57,13 @@
                 <img class="cover-photo">
                 <div class="info">
                     <h2>Snake Game</h2>
-                    <p class="description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.</p>
+                    <p class="description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
+                        ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,
+                        nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
+                        Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget,
+                        arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu
+                        pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean
+                        vulputate eleifend tellus.</p>
                     <div class="highscore"><span>Highscore:</span>589</div>
                 </div>
                 <div class="play">
@@ -61,41 +73,58 @@
             </div>
         </div>
     </main>
+</div>
 
-    <div class="popup-container">
-        <div class="popup-backdrop"></div>
-        <div class="popup popup-sign-in">
-            <h2>Sign in</h2>
-        </div>
-        <div class="popup popup-sign-up">
-            <h2>Sign up</h2>
-        </div>
+<div class="popup-container">
+    <div class="popup popup-sign-in">
+        <h2>Sign in</h2>
+        <form class="login-form">
+            <label for="sign_in_email">E-mail</label>
+            <input id="sign_in_email" placeholder="example@example.com">
+            <label for="sign_in_password">Password</label>
+            <input id="sign_in_password" type="password" placeholder="example">
+            <a class="button green full-width">Sign In!</a>
+        </form>
     </div>
+    <div class="popup popup-sign-up">
+        <h2>Sign up</h2>
+        <form class="login-form">
+            <label for="sign_up_email">E-mail</label>
+            <input id="sign_up_email" placeholder="example@example.com">
+            <label for="sign_up_password">Password</label>
+            <input id="sign_up_password" type="password" placeholder="example">
+            <label for="sign_up_password_repeat">Repeat Password</label>
+            <input id="sign_up_password_repeat" type="password" placeholder="example">
+            <a class="button blue full-width">Register</a>
+        </form>
+    </div>
+</div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.slim.min.js"></script>
-    <script src="../js/vendor/color-thief.js"></script>
-    <script src="../js/vendor/classie.js"></script>
-    <script src="../js/vendor/selectFx.js"></script>
-    <script src="../js/general-functions.js"></script>
-    <script>
-        $(document).ready(function () {
-            // Get banner element and background-url and correct background blur
-            var $banner = $('#banner');
-            var $bannerContainer = $('#banner_container');
-            correctBackgroundBlur($banner, $bannerContainer);
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.slim.min.js"></script>
+<script src="../js/vendor/color-thief.js"></script>
+<script src="../js/vendor/classie.js"></script>
+<script src="../js/vendor/selectFx.js"></script>
+<script src="../js/general-functions.js"></script>
+<script src="../js/popups.js"></script>
+<script>
+    $(document).ready(function () {
+        // Get banner element and background-url and correct background blur
+        var $banner = $('#banner');
+        var $bannerContainer = $('#banner_container');
+        correctBackgroundBlur($banner, $bannerContainer);
 
-            var i;
-            $('.game').each(function (i, gameElement) {
-                correctBackgroundBlur($(gameElement).find('.cover-photo'), $(gameElement));
-            });
-
-            // Apply selectFX on all select elements with classes cs-select
-			(function() {
-				[].slice.call( document.querySelectorAll( 'select.cs-select' ) ).forEach( function(el) {
-					new SelectFx(el);
-				} );
-			})();
+        var i;
+        $('.game').each(function (i, gameElement) {
+            correctBackgroundBlur($(gameElement).find('.cover-photo'), $(gameElement));
         });
-    </script>
+
+        // Apply selectFX on all select elements with classes cs-select
+        (function () {
+            [].slice.call(document.querySelectorAll('select.cs-select')).forEach(function (el) {
+                new SelectFx(el);
+            });
+        })();
+    });
+</script>
 </body>
 </html>
