Fixed navbar on gamePage

--- a/mockupViews/landing/index.html
+++ b/mockupViews/landing/index.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="play">
                     <img class="photo" src="../img/snake.png">
-                    <a href="#" class="button full-width green">Play Game</a>
+                    <a href="../gamepage/gamePage.html" class="button full-width green">Play Game</a>
                 </div>
             </div>
         </div>
