--- a/mockupViews/gamepage/gamePage.html
+++ b/mockupViews/gamepage/gamePage.html
@@ -18,7 +18,7 @@
 <div class="navbar">
     <header>
         <div class="left-container">
-            <div class="logo" href="#"><span>WebTech</span> Games</div>
+            <a class="no-link" href="../landing/index.html"><div class="logo"><span>WebTech</span> Games</div></a>
         </div>
         <div class="right-container">
             <div class="signup"><a href="#" class="button green">Sign In</a><a href="#" class="button blue">Sign Up</a>
@@ -40,21 +40,12 @@
     <h3 class="expPar">Highscores</h3>
     <hr>
     <ol class="expPar">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li class="highscore-list"></li>
+        <li class="highscore-list"></li>
+        <li class="highscore-list"></li>
+        <li class="highscore-list"></li>
+        <li class="highscore-list"></li>
+        <li class="highscore-list"></li>
     </ol>
 </div>
 
@@ -86,9 +77,8 @@
 
 <canvas id="highscore_history" class="highscore-history" width="100%" height="300px" style="height: 300px; max-height: 200px"></canvas>
 <footer>
-    <p class="footer-right"><a href="#">Back to top</a></p>
-    <p class="footer-left">&copy; 2017 WebTech Games, Inc. &middot; <a href="#">Privacy</a> &middot; <a
-            href="#">Terms</a></p>
+    <p class="footer-right"><a class="footer-link" href="#">Back to top</a></p>
+    <p class="footer-left">&copy; 2017 WebTech Games, Inc. &middot; <a class="footer-link" href="#">Privacy</a> &middot; <a class="footer-link" href="#">Terms</a></p>
 </footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.min.js"></script>
