--- a/Battleship/battleship.html
+++ b/Battleship/battleship.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Battleship</title>
-    <link rel="stylesheet" type="text/css" href="battleship.css">
+      <meta charset="utf-8">
   </head>
   <body>
-    <h1>Battleship</h1>
-    <p>Instructions:<p>
-    <p>Click on the board to fire a missile! Try to sink every battleship!</p>
-    <p>Click on the play button to begin!</p>
     <input type="button" value="Play" onclick="toggle()"/>
-    <div id="scoreBoard" style="...">
+    <div id="scoreBoard">
         <p2>Your points: <span id="score">0</span></p2>
 	</div>
     <div id="gameboard" style="display:none"></div>
     <script type="text/javascript" src="battleship.js"></script>
+    <link rel="stylesheet" type="text/css" href="battleship.css">
   </body>
 </html>
