Login and Logout systems

--- a/webtechgames/webtechsite/static/webtechsite/index.html
+++ b/webtechgames/webtechsite/static/webtechsite/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/vendor/cs-skin-elastic.css">
     <link rel="stylesheet" href="general.css">
     <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="../../webtechsite/main.css">
     <link rel="stylesheet" href="popup.css">
     <link rel="stylesheet" href="https://i.icomoon.io/public/temp/6b6caf7f8e/webtech-games/style.css">
 </head>
@@ -33,7 +33,7 @@
             <div class="banner" id="banner" style="background-image: url('../img/landing-background.jpg');"></div>
             <div class="banner-content">
                 <div class="splash">
-                    <h1>Want To Track Your Gaming Skills?</h1>
+                    <h1 style="color:red;">Want To Track Your Gaming Skills?</h1>
                     <p>Signing up allows you to record your game activity and highscores. Save your highscores and
                         compete with others!</p>
                     <a class="button blue" onclick="showPopup('sign-up')">Sign Up Now</a>
